# nissefar

./: .gitignore  CMakeLists.txt
include/: AdminUtils.h  AnalyticsQuery.h  CalculationService.h  Config.h  Database.h  DbOps.h  DiffUtil.h  DiscordEventService.h  Domain.h  Formatting.h  GoogleDocsService.h  HtmlTextExtract.h  LlmService.h  Nissefar.h  OllamaToolCalling.h  SqlSafety.h  UrlSafety.h  VideoSummaryService.h  WebPageService.h  YoutubeService.h  bot_config.h  config.h  message.h  nissefar.h  ollama.hpp
scripts/: summarize_video.sh
sql/: 01_server.sql  02_channel.sql  03_user.sql  04_message.sql  05_reaction.sql
src/: AnalyticsQuery.cpp  CalculationService.cpp  Config.cpp  Database.cpp  DbOps.cpp  DiffUtil.cpp  DiscordEventService.cpp  Formatting.cpp  GoogleDocsService.cpp  HtmlTextExtract.cpp  LlmService.cpp  Nissefar.cpp  SqlSafety.cpp  UrlSafety.cpp  Utf8Display.cpp  VideoSummaryService.cpp  WebPageService.cpp  YoutubeService.cpp  bot_config.cpp  main.cpp
tests/: AnalyticsQueryTests.cpp  DiffUtilTests.cpp  FormattingTests.cpp  HtmlTextExtractTests.cpp  SqlSafetyTests.cpp  UrlSafetyTests.cpp
